--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>The Tower of Hanoi</h1>
+        <h3>A funny game</h3>
+    </header>
+    <section id='board'>
+        <div class='container' id='ctn1'></div>
+        <div class='container' id='ctn2'></div>
+        <div class='container' id='ctn3'></div>
+    </section>
     <script src='script.js' type='text/javascript'></script>
 </body>
 </html>
