--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Tower of Hanoi</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>The Tower of Hanoi</h1>
-        <h3>A funny game</h3>
+        <h3>Could you master it?</h3>
     </header>
-    <section id='board'>
-        <div class='container' id='ctn0'></div>
-        <div class='container' id='ctn1'></div>
-        <div class='container' id='ctn2'></div>
+    <section id='login-page'>
+        <form id="form">
+            <h4>Choose a player id:</h4>
+            <input type="text" placeholder="Type your player id here" id="playerID"></input>
+            <hr>
+            <button id="login">Play!</button>
+        </form>
+    </section>
+    <section id='game-page'>
+        <div id='board'>
+            <div class='container' id='ctn0'></div>
+            <div class='container' id='ctn1'></div>
+            <div class='container' id='ctn2'></div>
+        </div>
     </section>
     <script src='script.js' type='text/javascript'></script>
 </body>
