--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <section id='login-page'>
         <form id="form">
             <h4>Choose a player id:</h4>
-            <input type="text" placeholder="Type your player id here" id="playerID"></input>
+            <!-- Turning autocomplete off in the input https://www.w3schools.com/howto/howto_html_autocomplete_off.asp-->
+            <input type="text" placeholder="Type your player id here" id="playerID" autocomplete="off"></input>
             <hr>
             <button id="login">Play!</button>
         </form>
