--- a/index.html
+++ b/index.html
@@ -22,10 +22,26 @@
         </form>
     </section>
     <section id='game-page'>
+        <h4 id='player'></h4>
+        <h4 id="score">Best score: 0</h4>
         <div id='board'>
             <div class='container' id='ctn0'></div>
             <div class='container' id='ctn1'></div>
             <div class='container' id='ctn2'></div>
+        </div>
+        <div>
+            <h4>Game mode:</h4>
+            <button class='set-btn' id='selection'>Traditional</button>
+            <button class='set-btn'>Upside-down</button>
+            <button class='set-btn'>Random</button>
+            <button class='set-btn'>Bicolor</button>
+        </div>
+        <div>
+            <h4>Difficulty level:</h4>
+            <button class='set-btn' id='selection'>Easy</button>
+            <button class='set-btn'>Medium</button>
+            <button class='set-btn'>Hard</button>
+            <button class='set-btn'>Harder</button>
         </div>
     </section>
     <script src='script.js' type='text/javascript'></script>
