--- a/index.html
+++ b/index.html
@@ -31,17 +31,21 @@
         </div>
         <div>
             <h4>Game mode:</h4>
-            <button class='set-btn' id='selection'>Traditional</button>
+            <button class='set-btn'>Traditional</button>
             <button class='set-btn'>Upside-down</button>
             <button class='set-btn'>Random</button>
             <button class='set-btn'>Bicolor</button>
         </div>
         <div>
             <h4>Difficulty level:</h4>
-            <button class='set-btn' id='selection'>Easy</button>
+            <button class='set-btn'>Easy</button>
             <button class='set-btn'>Medium</button>
             <button class='set-btn'>Hard</button>
             <button class='set-btn'>Harder</button>
+        </div>
+        <div>
+            <button class='set-btn' id='rstGame'>Reset game</button>
+            <button class='set-btn' id='rstUser'>Reset user</button>
         </div>
     </section>
     <script src='script.js' type='text/javascript'></script>
