Difficulty menu improved

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         </div>
         <div>
             <h4>Game mode:</h4>
-            <button class='set-btn'>Traditional</button>
-            <button class='set-btn'>Upside-down</button>
-            <button class='set-btn'>Random</button>
-            <button class='set-btn'>Bicolor</button>
+            <button class='set-btn' id='gameMode1'>Traditional</button>
+            <button class='set-btn' id='gameMode2'>Upside-down</button>
+            <button class='set-btn' id='gameMode3'>Random</button>
+            <button class='set-btn' id='gameMode4'>Bicolor</button>
         </div>
         <div>
             <h4>Difficulty level:</h4>
-            <button class='set-btn'>Easy</button>
-            <button class='set-btn'>Medium</button>
-            <button class='set-btn'>Hard</button>
-            <button class='set-btn'>Harder</button>
+            <button class='set-btn' id='level1'>Easy</button>
+            <button class='set-btn' id='level2'>Medium</button>
+            <button class='set-btn' id='level3'>Hard</button>
+            <button class='set-btn' id='level4'>Harder</button>
         </div>
         <div>
             <button class='set-btn' id='rstGame'>Reset game</button>
