--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
             <button class='set-btn' id='rstUser'>Reset user</button>
         </div>
     </section>
+    <!-- Add audio elements https://developer.mozilla.org/en-US/docs/Web/HTML/Element/audio -->
+    <audio id='song1'> <source src="./music/Mole_-_05_-_Welcome_to_Videogame_Island.mp3"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
+    <audio id='song2'> <source src="./music/"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
+    <audio id='song3'> <source src="./music/"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
+    <audio id='song4'> <source src="./music/"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
+    <audio id='song5'> <source src="./music/"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
+    <audio id='song6'> <source src="./music/"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
     <script src='script.js' type='text/javascript'></script>
 </body>
 </html>
