1 song playing update

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     </section>
     <!-- Add audio elements https://developer.mozilla.org/en-US/docs/Web/HTML/Element/audio -->
     <audio id='song1'> <source src="./music/Mole_-_05_-_Welcome_to_Videogame_Island.mp3"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
-    <audio id='song2'> <source src="./music/"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
-    <audio id='song3'> <source src="./music/"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
-    <audio id='song4'> <source src="./music/"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
-    <audio id='song5'> <source src="./music/"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
-    <audio id='song6'> <source src="./music/"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
+    <audio id='song2'> <source src="./music/Mole_-_10_-_Leaving_Videogame_Island.mp3"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
+    <audio id='song3'> <source src="./music/Soularflair_-_18_-_Cue_2_-_Journey-Motion-Montage-Videogame_Vicissitude.mp3"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
+    <audio id='song4'> <source src="./music/The_J_Arthur_Keenes_Band_-_05_-_Videogame_Theme.mp3"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
+    <audio id='song5'> <source src="./music/Visager_-_08_-_Streamside_Hotel_Loop.mp3"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
+    <audio id='song6'> <source src="./music/Visager_-_11_-_Sunset_over_the_Treetops_Loop.mp3"  type='audio/mpeg'>Your browser does not support the audio element.</audio>
     <script src='script.js' type='text/javascript'></script>
 </body>
 </html>
