Added a mute music button

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <div>
             <button class='set-btn' id='rstGame'>Reset game</button>
             <button class='set-btn' id='rstUser'>Reset user</button>
+            <button class='set-btn' id='silence'>Mute music</button>
         </div>
     </section>
     <!-- Add audio elements https://developer.mozilla.org/en-US/docs/Web/HTML/Element/audio -->
