Added the scores page, empty at this point

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             <button class='set-btn' id='rstGame'>Reset game</button>
             <button class='set-btn' id='rstUser'>Reset user</button>
             <button class='set-btn' id='silence'>Mute music</button>
+            <button class='set-btn' id='topPlayers'>Top scores</button>
+        </div>
+    </section>
+    <section id='score-page'>
+        <div>
+            <button class='set-btn' id='return'>Return to game</button>
         </div>
     </section>
     <!-- Add audio elements https://developer.mozilla.org/en-US/docs/Web/HTML/Element/audio -->
