Prints stored scores

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         </div>
     </section>
     <section id='score-page'>
+        <div id='score-board'>
+            <div id='top-gamers'></div>
+            <div id='top-scores'></div>
+        </div>
         <div>
             <button class='set-btn' id='return'>Return to game</button>
         </div>
