shows movements and current score

--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
         </form>
     </section>
     <section id='game-page'>
-        <h4 id='player'></h4>
-        <h4 id="score">Best score: 0</h4>
+        <div>
+            <h4 id='player'></h4>
+            <h4 id='num-mov'>Movements: 0</h4>
+        </div>
+        <div>
+            <h4 id="score">Best score: 0</h4>
+            <h4 id='curr-score'>Current score: 0</h4>
+        </div>
         <div id='board'>
             <div class='container' id='ctn0'></div>
             <div class='container' id='ctn1'></div>
